--- a/res/theme_anthracite.css
+++ b/res/theme_anthracite.css
@@ -8,9 +8,13 @@
 /* ******************* GAME ******************* */
 /* ******************************************** */
 
-body.scheme_anthracite {
-	background-color: #181818;
+.scheme_anthracite,
+.scheme_anthracite .help {
+	color-scheme: dark;
+	--page-background-color: #181818;
+	--text-color: #808080;
 }
+
 body.scheme_anthracite.with_background_image,
 .scheme_anthracite .dialog {
 	background: repeat local top left -230px url('img/theme_anthracite_texture_brushed_background.jpg'), #181818; /* source: https://pngtree.com/freebackground/black-metal-texture-texture-background-banner_1141447.html Volkeyrn: permanent premium member */
@@ -293,7 +297,7 @@ body.scheme_anthracite.with_background_image,
 /* ******************* TOOLTIP ******************* */
 /* *********************************************** */
 .scheme_anthracite #tooltip,
-.scheme_anthracite .tooltip-block > div {
+.scheme_anthracite .tooltip-content{
 	background-color: #282828;
 	background-image: url('img/theme_anthracite_tooltip_background.png'); /* source of images for graphic design : https://pngtree.com/freepng/metal-brushed-texture-background-hd-picture_4364018.html Volkeyrn: permanent premium member */
 	background-repeat: repeat;
@@ -304,7 +308,7 @@ body.scheme_anthracite.with_background_image,
 	border-radius: 5px;
 	box-shadow: 2px 2px 3px #000000;
 }
-.scheme_anthracite .tooltip-block > div { /* tooltip on ? top right column */
+.scheme_anthracite .tooltip-content{ /* tooltip on ? top right column */
 	padding: 5px;
 }
 .scheme_anthracite .button_tooltip {
