--- a/res/theme_factory.css
+++ b/res/theme_factory.css
@@ -10,10 +10,20 @@
 /* ******************************************** */
 /* ******************* GAME ******************* */
 /* ******************************************** */
+
+.scheme_factory,
+.schemscheme_factorye_cyber .help {
+	color-scheme: dark;
+	--page-background-color: #242324;
+	--text-color: #b7b6b7;
+}
+
 body.scheme_factory {
 	background-color: #242324;
 	color-scheme: dark;
 }
+
+
 .scheme_factory #gamePageContainer,
 .scheme_factory select,
 .scheme_factory .btn,
@@ -381,7 +391,7 @@ body.scheme_factory {
 	/* font-size: 13px; /* for center tooltip except title, effects and flavor */
 /* } */
 .scheme_factory #tooltip,
-.scheme_factory .tooltip-block > div {
+.scheme_factory .tooltip-content{
 	/* default padding-left: 3px; */
 	padding-bottom: 5px;
 	background: rgba(31, 30, 31, 0.9);
@@ -396,7 +406,7 @@ body.scheme_factory {
 				0 0 3px 1px rgba(0, 0 , 0, 0.5);
 	/* margin-left: 20px; /* for offset tooltip due to larger buttons .btn.modern */
 }
-.scheme_factory .tooltip-block > div { /* tooltip on ? top right column */
+.scheme_factory .tooltip-content{ /* tooltip on ? top right column */
 	padding: 5px;
 }
 .scheme_factory .button_tooltip {
