--- a/res/theme_minimalist.css
+++ b/res/theme_minimalist.css
@@ -353,7 +353,7 @@ body.scheme_minimalist.with_background_image,
 /******************** TOOLTIP ********************/
 /*************************************************/
 .scheme_minimalist #tooltip,
-.scheme_minimalist .tooltip-block > div {
+.scheme_minimalist .tooltip-content{
 	background-color: #101115;
 	font-size: 14px;
 	color: #828790; /* tooltip windows == left column : left text */
@@ -364,7 +364,7 @@ body.scheme_minimalist.with_background_image,
 	box-shadow: 4px 4px 9px #0A0A0D;
 	margin-left: 20px; /* for offset tooltip due to larger buttons .btn.modern */
 }
-.scheme_minimalist .tooltip-block > div {
+.scheme_minimalist .tooltip-content{
 	padding: 5px;
 }
 .scheme_minimalist .button_tooltip {
