--- a/res/theme_fluid.css
+++ b/res/theme_fluid.css
@@ -291,7 +291,7 @@ body.scheme_fluid,
 /******************** TOOLTIP ********************/
 /*************************************************/
 .scheme_fluid #tooltip,
-.scheme_fluid .tooltip-block > div {
+.scheme_fluid .tooltip-content{
 	background-color: #111011;
 	color: #828790; /* tooltip windows == left column : left text */
 	border: 1px solid rgba(96, 96, 96, 0.5); /* color #606060 */
@@ -299,7 +299,7 @@ body.scheme_fluid,
                  0 -2px 0 #151415 !important;
 	border-radius: 11px !important;
 }
-.scheme_fluid .tooltip-block > div { /* tooltip on ? top right column */
+.scheme_fluid .tooltip-content{ /* tooltip on ? top right column */
 	padding: 5px;
 }
 .scheme_fluid .button_tooltip {
