--- a/res/theme_tombstone.css
+++ b/res/theme_tombstone.css
@@ -359,7 +359,7 @@ body.scheme_tombstone {
 	/* font-size: 13px; /* for center tooltip except title, effects and flavor */
 /* } */
 .scheme_tombstone #tooltip,
-.scheme_tombstone .tooltip-block > div {
+.scheme_tombstone .tooltip-content{
 	/* default padding-left: 3px; */
 	padding-bottom: 5px;
 	background: #232428;
@@ -367,7 +367,7 @@ body.scheme_tombstone {
 	border: 1px solid #5b5b5e;
 	border-radius: 5px;
 }
-.scheme_tombstone .tooltip-block > div { /* tooltip on ? top right column */
+.scheme_tombstone .tooltip-content{ /* tooltip on ? top right column */
 	padding: 5px;
 }
 .scheme_tombstone .button_tooltip {
