--- a/res/theme_grassy.css
+++ b/res/theme_grassy.css
@@ -38,6 +38,7 @@ body.scheme_grassy {
 .scheme_grassy #advisorsContainer,
 .scheme_grassy #craftContainer,
 .scheme_grassy #fastHuntContainer,
+.scheme_grassy #fastSacrificeContainer,
 .scheme_grassy #fastPraiseContainer {
 	padding-top: 5px;
 	padding-bottom: 5px;
@@ -49,6 +50,7 @@ body.scheme_grassy {
 .scheme_grassy #resContainer,
 .scheme_grassy #advisorsContainer,
 .scheme_grassy #fastHuntContainer,
+.scheme_grassy #fastSacrificeContainer,
 .scheme_grassy #fastPraiseContainer {
 	margin-bottom: 5px;
 }
