--- a/res/theme_space.css
+++ b/res/theme_space.css
@@ -1075,10 +1075,15 @@ body.scheme_space.with_background_image {
 .scheme_unicor div#advisorsContainer {
 	color: #C23574;
 }
-.scheme_space #fastHuntContainer > a { /* Text left column : "Send hunters (xx times)" */
+.scheme_space #fastHuntContainer > a, /* Text left column : "Send hunters (xx times)" */
+.scheme_space #fastSacrificeContainer > a {
 	font-size: 110%;
 }
-.scheme_space #fastHuntContainerCount { /* Text left column : "xx times" from Send hunters */
+.scheme_space #fastHuntContainer > a:hover,
+.scheme_space #fastSacrificeContainer > a:hover {
+	text-shadow: 1px 1px #101010;
+}
+.scheme_space div.pin-link span.pin-link-quantity { /* Text left column : "xx times" from Send hunters */
 	color: #F4691A;
 }
 .scheme_space #fastPraiseContainer > a { /* Text left column : "Praise the sun!" */
@@ -1087,9 +1092,6 @@ body.scheme_space.with_background_image {
 .scheme_space #fastPraiseContainer > a:hover {
 	color: #FFFFFF;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9), 3px 1px 6px #C23574, -3px -1px 6px #C23574;
-}
-.scheme_space #fastHuntContainer > a:hover {
-	text-shadow: 1px 1px #101010;
 }
 .scheme_space .res-cell.positive-weather { /* to change the color for bonus cell according to the season */
 	font-size: 90% !important;
